# ModernStaggerLock--Claude

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: Hooks.cpp  Hooks.h  LoadGame.cpp  PrecisionAPI.h  Settings.cpp  Settings.h  main.cpp
